syntax = "proto3";
option optimize_for = LITE_RUNTIME;

import "protos/ftrace/print.proto";
import "protos/ftrace/sched_switch.proto";

message FtraceEvent {
  uint32 pid = 1;
  oneof event {
    PrintFtraceEvent print = 2;
    SchedSwitchFtraceEvent sched_switch = 3;
  }
}
